# imaginarium

./: .gitignore  README.md  manage.py  pyproject.toml  requirements.txt
cards/: models.py  urls.py  utils.py  views.py
cards/migrations/: 0001_initial.py  0002_add_deck_field_to_card.py  0002_card_deck.py  0003_auto_20200320_1649.py  0003_deck_model.py  0004_rename_names.py  0005_deck_add_image_and_remove_field.py  0006_rename_deck_name_to_type.py  0007_auto_20200329_2026.py
cards/static/css/cards/: index.css
cards/static/css/decks/: index.css
cards/templates/cards/: detail.html  index.html
cards/templates/decks/: index.html
cards/views/: cards.py  decks.py
imaginarium/: fixtures.json  settings.py  urls.py  wsgi.py
imaginarium/fixtures/: deck_fixtures.json  pandora_fixtures.json
