[tool.poetry]
name = "imaginarium"
version = "0.1.0"
description = ""
authors = ["Laura Mac"]

[tool.poetry.dependencies]
python = "^3.6"
Django = "^3.0.4"
sentry_sdk = "^1.14.0"
pylint = "^2.4.4"
black = "^19.10b0"
isort = "^4.3.21"
django-extensions = "^2.2.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
